# Cellular_automaton

./: README.md  main.py  pyproject.toml  requirements.txt
