[tool.poetry]
name = "cellular-automaton"
version = "0.1.0"
description = ""
authors = ["RomanL91 <dev_roman91@mail.ru>"]
readme = "README.md"
packages = [{include = "cellular_automaton"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
